@@ -77,9 +77,11 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015 Michal Špaček
-     Artistic License
-     BSD 2-Clause License
+    © 2015 Michal Špaček
+
+    Artistic License
+
+    BSD 2-Clause License
 
 VERSION
     0.04
